update quark compat